--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-067ecce7-1c4a-4332-9924-05e7e5025194;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+    "ConnectionStrings": {
+        "SalesWebMvcContext": "server=localhost;userid=developer;password=1234567;database=saleswebmvcappdb"
+    }
 }
