--- a/SalesWebMvc/SalesWebMvc.csproj
+++ b/SalesWebMvc/SalesWebMvc.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
     <DebugType>full</DebugType>
+    <StartupObject></StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
